# rchess

./: .gitignore  Cargo.toml  WAC Score.txt  ccr_onehour.txt  engines.json  eval.sh  perfstat.sh  perft_fens.txt  plot.gnu  stockfish.sh  tournament.sh
.cargo/: config.toml
c_testing/: test.cpp  test2.cpp
rchess_engine/: Cargo.toml
rchess_engine/benches/: bench.rs
rchess_engine/src/: ab_prev.rs  ab_threadpool.rs  alphabeta.rs  attack_maps.rs  bitboard.rs  bitboard_prev.rs  coords.rs  cuckoo.rs  endgame.rs  evaluate.rs  evmap_tables.rs  explore.rs  game.rs  game_stack.rs  gen_moves.rs  hashing.rs  heuristics.rs  killer_moves.rs  lib.rs  lockfree_hashmap.rs  lockless_map.rs  lockless_map2.rs  magics.rs  main.rs  material_table.rs  move_ordering.rs  movegen.rs  opening_book.rs  options.rs  parsing.rs  pawn_hash_table.rs  pgn.rs  prefetch.rs  prev_evaluate.rs  pruning.rs  qsearch.rs  search.rs  searchstats.rs  see.rs  simd_test.rs  (+13 more)
rchess_engine/src/brain/: accumulator.rs  autodiff.rs  binpack.rs  filter.rs  gensfen.rs  matrix.rs  mod.rs  networks2.rs  nnue.rs  old_nnue.rs  sf_compat.rs  trainer.rs  types.rs
rchess_engine/src/heuristics/: butterfly.rs  capture_history.rs  continuation_history.rs  counter_moves.rs  killer_moves.rs  mod.rs
rchess_engine/src/material/: mat_table.rs  mod.rs  pawn_table.rs  vec_table.rs
rchess_engine/src/sf_compat/: accumulator.rs  feature_trans.rs  layers.rs  mod.rs
rchess_engine/src/syzygy/: mod.rs  sz_errors.rs  sz_format.rs
rchess_engine/src/threading/: lazy_smp.rs  mod.rs  thread_types.rs
rchess_game/: Cargo.toml
rchess_tuner/: Cargo.toml
rchess_tuner/src/: brownian.rs  clop.rs  gamerunner.rs  json_config.rs  main.rs  optimizer.rs  parsing.rs  simulate.rs  sprt.rs  spsa.rs  supervisor.rs  tuner_types.rs
rchess_uci/: Cargo.toml
rchess_uci/src/: main.rs  notation.rs
