[workspace]

members = [
    "rchess_uci",
    "rchess_engine",
    # "rchess_magics",
]
# exclude = [
#     "rchess_game",
# ]

[profile.dev.package."*"]
opt-level = 3

# [profile.dev]
# opt-level = 1

[profile.release]
debug = 1
incremental = true

# https://deterministic.space/high-performance-rust.html
lto = "thin"
# lto = "fat"
# codegen-units = 1

