[package]
name = "rchess_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rchess_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "rchess_engine"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "html_reports" ] }

[dependencies]

log = "0.4.*"
env_logger = "0.9.*"
gag = "1.0.0"

nom = "7.0.0"

rand = "0.8.4"

bitflags = "1.3.2"

rayon = "1.5.1"
parking_lot = "0.11.2"
# evmap = "10.0.2"
# evmap-derive = "0.2.0"

regex = "1.5.4"

itertools = "0.10.1"
lazy_static = "1.4.0"
array-init = "2.0.0"

rustc-hash = "1.1.0"


# serde = "1.0.*"
# serde_json = "1.0.*"

# bitflags = "1.3"

# byteorder = "1.4.3"

