[package]
name = "rchess_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rchess_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "rchess_engine"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[features]
default = [
    # "par",
    # "one_thread",
    # "smallstack",

    # "backtrace",

    "keep_stats",

    "positional_scoring",

    "syzygy",

    # "null_pruning",
    "late_move_reduction",
    "history_heuristic",

    "qsearch",

    "pvs_search",

    # "negamax_only",

    ]
# default = []
par = []
one_thread = []
smallstack = []

backtrace = []

keep_stats = []

positional_scoring = []

syzygy = []

null_pruning = []
late_move_reduction = []
history_heuristic = []
qsearch = []

pvs_search = []
negamax_only = []

[dev-dependencies]
criterion = { version = "0.3.5", features = [ "html_reports" ] }

[dependencies]

jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
# heapsize = "0.4.2"

log = "0.4.*"
env_logger = "0.9.*"
gag = "1.0.0"
simplelog = "0.10.2"

ctrlc = "3.2.1"

chrono = "0.4.19"

nom = "7.0.0"

rand = "0.8.4"
rand_distr = "0.4.2"

ndarray = { version = "0.15.3", features = ["rayon","serde","blas"] }
ndarray-rand = "0.14.0"
blas-src = { version = "0.8.0", features = ["openblas"] }
openblas-src = { version = "0.10.4", features = ["cblas","system"] }

sprs = "0.11.0"

# copyless = "0.1.5"

nalgebra = { version = "0.29.0", features = ["rand", "serde-serialize"] }

# nshare = { version = "0.7.0", features = ["std","ndarray","nalgebra"] }

num-traits = "0.2.14"
num-integer = "0.1.44"

mnist = "0.5.0"
# image = "0.23.14"

rayon = "1.5.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"

parking_lot = "0.11.2"

# futures = { version = "0.3.17", features = ["executor", "thread-pool"] }

evmap = "10.0.2"
evmap-derive = "0.2.0"
dashmap = "4.0.2"

num_cpus = "1.13.0"

bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
# serde-big-array = "0.3.2"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }

regex = "1.5.4"

itertools = "0.10.1"
lazy_static = "1.4.0"
array-init = "2.0.0"

arrayvec = "0.7.1"
ringbuffer = "0.8.3"
atom = "0.4.0"
petgraph = "0.6.0"

rustc-hash = "1.1.0"

either = "1.6.1"

open = "2.0.1"

# serde = "1.0.*"
# serde_json = "1.0.*"
zerocopy = { version = "0.6.0", features = ["simd-nightly"] }

bitflags = "1.3.*"
byteorder = "1.4.3"
bitvec = "0.22.3"
# bytes = "1.1.0"
packed_struct = { version = "0.10.0", features = ["use_serde"] }

# termtree = "0.2.3"
# lzzzz = "0.8.0"

positioned-io = { package = "positioned-io-preview", version = "0.3.3" }
once_cell = "1.8.0"

# coz = "0.1.3"

derive_builder = "0.10.2"
derive_more = "0.99.16"
derive-new = "0.5.9"

