[package]
name = "rchess_tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "rchess_tuner_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "rchess_tuner"
# path = "src/main.rs"

[dependencies]

rchess_engine = { path = "../rchess_engine" }

log = "0.4.*"
env_logger = "0.9.*"
gag = "1.0.0"
simplelog = "0.10.2"

chrono = "0.4.19"

