[package]
name = "rchess_tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "rchess_tuner_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "rchess_tuner"
# path = "src/main.rs"

[dependencies]

rchess_engine = { path = "../rchess_engine" }

log = "0.4.*"
env_logger = "0.9.*"
gag = "1.0.0"
simplelog = "0.10.2"

chrono = "0.4.19"

itertools = "0.10.3"

regex = "1.5.4"

once_cell = "1.8.0"

nom = "7.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"

derive-new = "0.5.9"
derive_more = "0.99.16"

crossbeam = "0.8.1"
parking_lot = "0.11.2"

# sysinfo = "0.23.1"

nix = "0.23.0"

rand = "0.8.4"
rand_distr = "0.4.2"

statrs = "0.15.0"

argmin = "0.5.0"

num_cpus = "1.13.1"

